# 4days-Rust

./: LICENSE  README.md
day1afternoon/: Cargo.toml
day1afternoon/src/: exercise1.rs  exercise2_intoiterator.rs  exercise2_iterator.rs  main.rs
day1morning/: Cargo.toml
day1morning/src/: exercise1.rs  exercise2_1.rs  exercise2_2.rs  main.rs
day2afternoon/: Cargo.toml
day2afternoon/src/control_flow/: block.rs  break_and_continue.rs  for.rs  if.rs  loop.rs  while.rs
day2afternoon/src/exercises/: luhn.rs  string_iter.rs
day2afternoon/src/modules/: Hierarchy.md  visibility.rs
day2afternoon/src/standard_library/: box.rs  box_recursive.rs  hashmap.rs  option_and_result.rs  rc.rs  string.rs  vec.rs  weak_ptr.rs
day2morning/: Cargo.toml
day2morning/src/: enum.rs  example_mathod.rs  example_method.rs  main.rs  method.rs  pattern.rs  struct.rs
day2morning/src/exercises/: exercise_health_statistics.rs  exercise_polygon_struct.rs
day3morning/: Cargo.toml
day3morning/src/Traits/: default_methods.rs  traits.rs
day3morning/src/Traits/important_traits/: README.md  closures.rs  default.rs  drop.rs  from_and_iterator.rs  from_iterator.rs  iterator.rs  iterators.rs  overload.rs  read.rs
day3morning/src/exercises/: gui.rs
