[package]
name = "day1morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "exercise1"
path = "src/exercise1.rs"

[[bin]]
name = "exercise2_1"
path = "src/exercise2_1.rs"

[[bin]]
name = "exercise2_2"
path = "src/exercise2_2.rs"

[[bin]]
name = "sosu"
path = "src/sample_sosu.rs"
