[package]
name = "day2morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "method"
path = "src/method.rs"

[[bin]]
name = "example_method"
path = "src/example_method.rs"

[[bin]]
name = "pattern_matching"
path = "src/pattern.rs"

[[bin]]
name = "exercise_health_statistics"
path = "src/exercises/exercise_health_statistics.rs"

[[bin]]
name = "exercise_polygon_struct"
path = "src/exercises/exercise_polygon_struct.rs"
