[package]
name = "day3morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "traits"
path = "src/Traits/traits.rs"

[[bin]]
name = "deriving"
path = "src/Traits/deriving.rs"

[[bin]]
name = "default_methods"
path = "src/Traits/default_methods.rs"

[bin]]
name = "iterator"
path = "src/Traits/important_traits/iterator.rs"
